--- a/IteVersion/style.css
+++ b/IteVersion/style.css
@@ -13,6 +13,13 @@ body{
 }
 
 
+.tp{
+    height: 0px;
+    width: 0px;
+    background: none;
+    margin-bottom: 16px;
+}
+
 .fade-text {
     opacity: 0;
     transform: translateY(20px);
@@ -232,7 +239,7 @@ footer{
 }
 
 .landbotContainer{
-    margin-top: 32px;
+    margin-top: 16px;
     width: 100%;
     height: 60vh;
     max-width: 1280px;
@@ -1259,7 +1266,7 @@ th {
 
     .landbotContainer{
         width: 90vw;
-        margin-top: 16px;
+        margin-top: 0px;
         margin-bottom: 48px;
     }
 
@@ -1439,13 +1446,15 @@ th {
         text-align: justify;
         margin-left: 24px;
         margin-right: 24px;
+        display: none;
     }
     
     .butonTp a{
         font-size: 18px;
         height: 42px;
         width: 272px;
-        margin-bottom: 16px;
+        margin-bottom: 24px;
+        margin-top: 24px;
     }
 
 
@@ -1568,8 +1577,8 @@ th {
 
     .landbotContainer{
         width: 90vw;
-        height: 80vh;
-        margin-top: 16px;
+        height: 85vh;
+        margin-top: 0px;
         margin-bottom: 48px;
     }
 
