--- a/IteVersion/style.css
+++ b/IteVersion/style.css
@@ -197,7 +197,7 @@ footer{
 
 .home{
     width: 100%;
-    height: 92vh;
+    height: auto;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -208,7 +208,6 @@ footer{
     background-repeat: no-repeat;
     background-size: cover;
     background-size: 150%;
-
 }
 
 .home h1{
@@ -241,7 +240,7 @@ footer{
 .landbotContainer{
     margin-top: 16px;
     width: 100%;
-    height: 60vh;
+    height: 80vh;
     max-width: 1280px;
     background-color: white;
     border-radius: 16px;
@@ -250,6 +249,7 @@ footer{
     justify-content: center;
     padding: 8px;
     box-shadow: 0 0 10px 10px rgba(0, 94, 188, 0.3);
+    margin-bottom: 64px;
 }
 
 #myLandbot{
