--- a/pacForm/form.css
+++ b/pacForm/form.css
@@ -26,6 +26,8 @@
     display: flex;
     flex-direction: column;
     gap: 20px;
+    box-shadow: 0 0 10px 10px rgba(0, 94, 188, 0.3);
+    min-height: 340px;
 }
 
 /* Barre de progression */
@@ -182,6 +184,7 @@ button{
     color: #0A7CFF;
     font-size: 20px;
     font-weight: 700;
+    width: 320px;
 }
 
 /* Conteneur du loader */
