--- a/pacForm/style.css
+++ b/pacForm/style.css
@@ -190,7 +190,7 @@ footer{
 
 .home{
     width: 100%;
-    height: 70vh;
+    height: 75vh;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -201,15 +201,15 @@ footer{
     background-repeat: no-repeat;
     background-size: cover;
     background-size: 150%;
-
 }
 
 .home h1{
-    margin: 0px;
+    margin: 4px;
     font-weight: 500;
     /* text-transform: uppercase; */
     color: #004081;
     margin-top: 96px;
+    margin-bottom: 0px;
     font-size: 40px;
 }
 
@@ -224,6 +224,8 @@ footer{
 
 .home p{
     margin: 0px;
+    margin-left: 4px;
+    margin-right: 4px;
     font-weight: 600;
     color: #004081;
     /* text-decoration: underline; */
