--- a/pacForm/style.css
+++ b/pacForm/style.css
@@ -524,6 +524,11 @@ footer{
     text-align: center;
     padding-bottom: 100px;
     padding-top: 100px;
+    background-image: url('assets/home.png');
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-size: 150%;
 }
 
 .section1 h3 {
@@ -538,6 +543,7 @@ footer{
     gap: 4vw;
     width: 100%;
     max-width: 1400px;
+    padding: 0px 16px 0px 16px;
 }
 
 .section1 .itemsFlexBox .item {
@@ -550,7 +556,7 @@ footer{
     max-width: 300px;
     min-width: 20vw; /* Largeur minimale pour garantir une mise en page cohérente */
     gap: 15px;
-    background: #ffffffcc;
+    background: #ffffffe4;
     padding: 20px;
     border-radius: 10px;
     box-shadow: 4px 4px 10px rgba(0, 0, 0, 0);
@@ -1295,6 +1301,10 @@ th {
         height: 468px;
     }
 
+    .section1{
+        background-size: 200%;
+    }
+
 
     .avis .avisContainer{
         margin: 24px;
@@ -1453,13 +1463,15 @@ th {
         text-align: justify;
         margin-left: 24px;
         margin-right: 24px;
+        display: none;
     }
     
     .butonTp a{
         font-size: 18px;
         height: 42px;
         width: 272px;
-        margin-bottom: 16px;
+        margin-bottom: 24px;
+        margin-top: 24px;
     }
 
 
@@ -1602,9 +1614,14 @@ th {
         flex-direction: column;
         width: 100%;
         padding-top: 64px;
+        padding-bottom: 78px;
         gap: 4vh;
         text-align: center;
-    }
+        /* background-size: 200%; */
+        background-repeat: no-repeat;
+        background-size: 350% 100%; /* ← Étire l'image pour qu'elle remplisse complètement la div */
+        background-position: calc(50% + 400px) calc(50% - 90px); /* ← Centre + 50px vers la droite */
+        }
 
     .section1 h2{
         font-size: 24px;
@@ -1665,12 +1682,14 @@ th {
     }
     
     .phone .phoneContainer div a{
-        margin-left: 32%;
+        /* margin-left: 32%; */
+        margin-left: calc(50% - 98px); 
         margin-right: auto;
     }
     
     .phone .phoneContainer div .miniTxt{
-        margin-left: 32%;
+        margin-left: calc(50% - 98px); 
+        margin-right: auto;
     }
     
     .phone .phoneContainer img{
@@ -1927,9 +1946,9 @@ th {
         overflow-x: scroll;
     }
 
-    .aides, .logoAides, .butonTpUp, .pompeChaleur, .partenaire, .section2{
+    .SectionText, .avisGoogle, .section1, .banner, .stats, .aides, .logoAides, .butonTpUp, .pompeChaleur, .partenaire, .section2{
         position: relative;
-        top: -146px;
+        top: -116px;
     }
 
     .section2{
@@ -1947,15 +1966,6 @@ th {
         height: 260px;
     }
 
-    .phone .phoneContainer div a{
-        margin-left: 24%;
-        margin-right: auto;
-    }
-
-    .phone .phoneContainer div .miniTxt{
-        margin-left: 24%;
-    }
-
     .title {
         font-size: 20px;
     }
@@ -1971,5 +1981,10 @@ th {
 
     .section2 .container .AvisBar {
         width: 328px;
+    }
+
+    .section1 {
+        background-size: 350% 100%; /* ← Étire l'image pour qu'elle remplisse complètement la div */
+        background-position: calc(50% + 220px) calc(50% - 90px); /* ← Centre + 50px vers la droite */
     }
 }
