--- a/pacForm/form.css
+++ b/pacForm/form.css
@@ -385,6 +385,7 @@ button{
     font-size: 12px;
     color: #4B5563;
     text-align: center;
+    font-style: normal !important;
 }
 
 .activeCircle {
@@ -392,7 +393,16 @@ button{
     color: white !important;
 }
 
+
+/* .inputInLineSpace {
+    margin-top: 12px;
+} */
+
 @media screen and (max-width: 768px) {
+    .inputInLineSpace {
+        margin-top: 12px;
+    }
+
     #form{
         margin: 0px;
         padding: 24px;
