--- a/pacForm/style.css
+++ b/pacForm/style.css
@@ -190,7 +190,8 @@ footer{
 
 .home{
     width: 100%;
-    height: 80vh;
+    min-height: 76vh;
+    height: auto;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -208,7 +209,8 @@ footer{
     font-weight: 500;
     /* text-transform: uppercase; */
     color: #004081;
-    margin-top: 96px;
+    /* margin-top: 96px; */
+    margin-top: 6vh;
     margin-bottom: 0px;
     font-size: 40px;
 }
