--- a/pv/style.css
+++ b/pv/style.css
@@ -151,8 +151,12 @@ body{
     width: 140px;
 }
 
-.logo4{
+.logo5{
     width: 152px;
+}
+
+.logo4{
+    width: 65px;
 }
 
 .logo{
@@ -286,9 +290,11 @@ footer{
 
 .SectionText p{
     font-size: 21px;
-    text-align: justify;
     line-height: 1.4em; /* Réduit l’interlignage */
     margin-bottom: 8px;
+    display: flex;
+    flex-direction: row;
+    text-align: left;
 }
 
 .SectionText .bold{
@@ -298,6 +304,12 @@ footer{
 .SectionText .highlight{
     font-weight: 600;
     color: #0A7CFF;
+}
+
+.SectionText p::before {
+    content: "✅";
+    margin-right: 0.5rem;
+    color: green;
 }
 
 
@@ -510,7 +522,7 @@ footer{
     font-size: 22px;
     background-color: #0A7CFF;
     height: 46px;
-    width: 292px;
+    width: 348px;
     border-radius: 3px;
     color: white;
     font-weight: 300;
@@ -635,6 +647,14 @@ footer{
     flex-direction: column;
 }
 
+.avis .avisContainer h2{
+    font-size: 32px;
+    color: white;
+    margin: 0%;
+    text-align: left;
+    /* text-decoration: underline; */
+}
+
 .avis .avisContainer .bold{
     font-weight: 600;
 }
@@ -722,7 +742,7 @@ footer{
     text-decoration: none;
     font-size: 20px;
     /* background-color: #22234A; */
-    background-color: #0A7CFF;
+    background-color: #2ecc71;
     height: 80px;
     width: 256px;
     border-radius: 3px;
@@ -1172,6 +1192,8 @@ th {
   height: auto; /* ou min-height si tu veux */
   box-sizing: border-box;
   overflow: hidden; /* évite débordement global */
+  position: relative;
+  overflow: hidden;
 }
 
 .banner-text {
@@ -1205,12 +1227,17 @@ th {
 .checklistChecked li {
     list-style: none;
     margin-bottom: 0.6rem;
-    font-size: 19px;
+    font-size: 16px;
     font-weight: 300;
+    /* text-justify: auto;
+    word-spacing: 2px;
+    word-break: break-all; */
+
     text-align: justify;
-    text-justify: inter-word;
-    word-spacing: normal;
-    hyphens: 4px;
+    text-justify: inter-character;
+
+    display: flex;
+    flex-direction: row;
 }
 
 .checklistChecked li::before {
@@ -1238,6 +1265,7 @@ th {
   display: flex;
   align-items: stretch;
   overflow: hidden;
+  z-index: 1;
 }
 
 .banner-img img {
@@ -1255,11 +1283,9 @@ position: relative;
 top: -2px;
 }
 
-
-
-
-
-
+.fixedheight{
+    min-height: 0% !important;
+}
 
 @media (max-width: 1700px){
     .home{
@@ -1397,8 +1423,12 @@ top: -2px;
         width: 94px;
     }
     
-    .logo4{
+    .logo5{
         width: 100px;
+    }
+
+    .logo4{
+        width: 42px;
     }
     
     .logo{
@@ -1469,7 +1499,7 @@ top: -2px;
     .butonTp a{
         font-size: 18px;
         height: 42px;
-        width: 272px;
+        width: 292px;
     }
 
 
@@ -1511,7 +1541,7 @@ top: -2px;
     .phone .phoneContainer div a{
         font-size: 18px;
         height: 60px;
-        width: 196px;
+        width: 224px;
     }
     
     .phone .phoneContainer div .miniTxt{
@@ -1667,7 +1697,7 @@ top: -2px;
     .butonTp a{
         font-size: 18px;
         height: 42px;
-        width: 272px;
+        width: 292px;
         margin-bottom: 24px;
         margin-top: 24px;
     }
@@ -1715,10 +1745,25 @@ top: -2px;
     height: auto;
     box-sizing: border-box;
     overflow: hidden;
+    position:static;
     }
 
     .banner-img {
         flex: 1 1 35%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        background-color: rgb(255, 255, 255);
+        background-image: url('assets/home.png');
+        background-position: center 160px;
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-size: 320%;
+    }
+
+    .Undisplay {
+        display: none;
     }
 
     .banner-text {
@@ -1742,7 +1787,7 @@ top: -2px;
         font-size: 18px;
         width: 248px;
         text-align: center;
-        margin-left: calc(50% - 140px);
+        margin-left: calc(50% - 124px);
     }
 
     .banner-img img {
@@ -1754,6 +1799,8 @@ top: -2px;
         display: block;
         clip-path: none;
     }
+
+
 }
 
 
@@ -1808,8 +1855,12 @@ top: -2px;
     .logo3{
         display: none;    }
     
-    .logo4{
+    .logo5{
         width: 96px;
+    }
+
+    .logo4{
+        width: 42px;
     }
     
     .logo{
@@ -1918,6 +1969,10 @@ top: -2px;
         font-size: 14px;
     }
 
+    .avis .avisContainer h2{
+    font-size: 24px;
+    margin-top: 16px;
+}
 
 
 
@@ -1945,12 +2000,12 @@ top: -2px;
     
     .phone .phoneContainer div a{
         /* margin-left: 32%; */
-        margin-left: calc(50% - 98px); 
+        margin-left: calc(50% - 112px); 
         margin-right: auto;
     }
     
     .phone .phoneContainer div .miniTxt{
-        margin-left: calc(50% - 98px); 
+        margin-left: calc(50% - 112px); 
         margin-right: auto;
     }
     
