--- a/pv/form.css
+++ b/pv/form.css
@@ -188,7 +188,7 @@ button{
 .msg_loader p{
     text-align: center;
     margin: 10px;
-    color: #004081;
+    color: #009dff;
     font-size: 20px;
     font-weight: 700;
     width: 320px;
