--- a/pv/form.css
+++ b/pv/form.css
@@ -191,7 +191,7 @@ button{
     text-align: center;
     margin: 10px;
     color: #009dff;
-    font-size: 20px;
+    font-size: 18px;
     font-weight: 700;
     width: 100%;
 }
@@ -265,6 +265,7 @@ button{
     width: 192px !important;
     height: 23px !important;
     align-self: center;
+    margin-top: auto;
 }
 
 
@@ -425,6 +426,47 @@ button{
     font-size: 18px;
 }
 
+.checklist-item-Js-annimation {
+display: flex;
+align-items: center;
+font-family: Arial, sans-serif;
+font-size: 18px;
+margin-bottom: 15px;
+opacity: 0;
+transition: opacity 0.3s ease;
+}
+.loader-checklist {
+border: 3px solid #d3eaff;
+border-top: 3px solid #007bff;
+border-radius: 50%;
+width: 16px;
+height: 16px;
+animation: spin 1s linear infinite;
+margin-right: 10px;
+}
+.check-Js-annimation {
+color: green;
+font-weight: bold;
+font-size: 21px;
+margin-right: 10px;
+}
+@keyframes spin {
+to { transform: rotate(360deg); }
+}
+
+#checklist-container-Js-annimation{
+display: none;
+flex-direction: column;
+margin-top: 24px;
+/* min-height: 100px; */
+}
+
+@media (max-width: 768px) {
+    .checklist-item-Js-annimation {
+        font-size: 16px;
+        margin-bottom: 12px;
+    }
+}
 
 /* .inputInLineSpace {
     margin-top: 12px;
